src/test/deca/context/invalid/class/surcharge/return_subtype_same_classe.deca
// Description:
//    On redéfini avec comme return un sous-type, mais dans la même classe
//
// Resultats:
//    Already defined

class A {
	A m() {}
	B m() {}
}

class B extends A {}

{}

